# dSCP

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
app/: dataset.py  engine.py  main.py
app/database/: __init__.py  checker.py  config.py  kaggle_retreiver.py  lfw_race_metadata.csv  preprocessor.py  reconstructor.py
app/eda/: eda_base.py  eda_illinois.py  eda_lfw.py
app/models/: resnet_model.py  train_resnet.py  vgg_model.py
documentation/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  portada.aux  portada.tex
documentation/NOTOCAR/: contents.aux  contents.tex  format.tex  index.aux  index.tex  packages.tex
documentation/bibliography/: books.bib  webs.bib
documentation/content/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  7.tex  8.tex  abstract.tex
metadata/: lfw_race_metadata.csv
