[project]
name = "dscp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "deepface>=0.0.99",
    "facenet-pytorch>=2.5.3",
    "grad-cam>=1.5.5",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "opencv-python<4.10",
    "pandas>=3.0.2",
    "polars>=1.39.2",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
    "seaborn>=0.13.2",
    "tensorflow-macos==2.16.2",
    "tensorflow-metal==1.2.0",
    "tf-keras<2.17",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length=79

[tool.ruff.lint]
select = ["E501"]
